static/style.css
@import "https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css";

/* Hive imports, not Semantic-UI */
@import url('https://fonts.googleapis.com/css?family=Lato:ital,wght@0,400;0,700;1,400&subset=latin,latin-ext&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,400;0,700;1,400&display=swap');

/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
Styles that override Semantic UI
- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */

/*
Prevent styling of <a> elements that aren't links
*/

a:not([href]) {
  color: inherit;
  text-decoration: inherit;
}

/*
Make sure that links inside a .ui.menu that use <ol> or <ul> retain the intended styling
*/

.ui.menu > .item a:not(.ui) {
  color: inherit;
  text-decoration: inherit;
}

.ui.menu > .item a:hover:not(.ui) {
  cursor: pointer;
  background-color: rgba(0, 0, 0, 0.03);
  color: rgba(0,0,0,.95);
}

.ui.text.menu > .item a:hover:not(.ui) {
  opacity: 1;
  background-color: transparent;
}

/*
Use real subscript and superscript characters where possible
*/

@supports (font-variant-position: sub) {
  sub {
    font-size: inherit;
    font-variant-position: sub;
    position: static;
  }
}

@supports (font-variant-position: super) {
  sup {
    font-size: inherit;
    font-variant-position: super;
    position: static;
  }
}

/*
Reset <fieldset> in a .ui.form
*/

.ui.form fieldset {
  border: none;
  margin: 0;
  padding: 0;
}

/*
Make sure that .ui.list that use <ol> or <ul> don't have bullets or numbers without using .bulleted or .ordered
*/

ol.ui,
ul.ui {
  list-style-type: none;
  padding-left: 0;
}

ol.ui.list:not(.bulleted):not(.ordered),
ul.ui.list:not(.bulleted):not(.ordered) {
  margin-left: 0;
}

ol.ui.list:not(.bulleted):not(.ordered) li:before,
ul.ui.list:not(.bulleted):not(.ordered) li:before {
  content: '';
}

p:last-child {
  margin-bottom: 1em;
}

/*
Fix the vertical alignment in the event feed
*/
.ui.feed>.event>.content .date {
  display: block;
}

/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
Styles that supplement Semantic UI
- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */

/*
Allow a form <legend> to be a .ui.header
*/

legend.ui.header {
  display: block;
  width: 100%;
}

/*
Allow commas on the end of each .ui.list .item by adding .comma.separated
*/

.ui[class*="comma separated"].horizontal.list:not(.bulleted):not(.ordered) > .item {
  margin-left: 0;
}

.ui[class*="comma separated"].horizontal.list:not(.bulleted):not(.ordered) > .item:before {
  margin: 0;
}

.ui[class*="comma separated"].list > .item:after {
  content: ',\0a0';
  display: inline;
  visibility: inherit;
}

.ui[class*="comma separated"].list > .item:last-child:after {
  content: '.';
}

/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
Styles that are independent of Semantic UI
- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */

.follower {
  display: flex;
  align-items: center;
  max-width: 250px;
}

.follower__avatar {
  border-radius: 50%;
  margin-right: 8px;
  flex: 0 0 40px
}

.follower__handle {
  padding-top: 2px;
  color: rgb(0, 0, 0);
}

:root {
  --BASE-FONT-MEASURE: 16;
  --BASE-FONT-PX: calc(var(--BASE-FONT-MEASURE) * 1px);
  --BASE-FONT-REM: 1rem;
  --VERTICAL-INCREMENT: calc(var(--BASE-FONT-REM) / 2);
  --TWO-INCREMENTS: calc(var(--VERTICAL-INCREMENT) * 2);
  --THREE-INCREMENTS: calc(var(--VERTICAL-INCREMENT) * 3);
  --MAX-SITE-WIDTH: 1200;
  --MAX-SITE-WIDTH-REM: calc((var(--MAX-SITE-WIDTH) / var(--BASE-FONT-MEASURE)) * 1rem);
}

html {
  font-size: var(--BASE-FONT-PX);
}

body,
p
{
  font-family: "Noto Serif", serif;
  font-size: var(--BASE-FONT-REM);
}

body {
  padding: 0 var(--BASE-FONT-REM);
}

p {
  margin-top: 0;
  margin-bottom: var(--THREE-INCREMENTS);
  line-height: 1.5;
  font-weight: 400;
}

h1 {
  font-family: Lato, sans-serif;
  font-size: calc((38 / 16) * 1rem);
  margin-top: 0;
  margin-bottom: var(--TWO-INCREMENTS);
  line-height: 1.2;
  font-weight: 400;
}

h2 {
  font-family: Lato, sans-serif;
  font-size: calc((30 / 16) * 1rem);
  margin-top: 0;
  margin-bottom: var(--TWO-INCREMENTS);
  line-height: 1.2;
  font-weight: 400;
}

h3 {
  font-family: Lato, sans-serif;
  font-size: calc((26 / 16) * 1rem);
  margin-top: 0;
  margin-bottom: var(--TWO-INCREMENTS);
  line-height: 1.2;
  font-weight: 400;
}

h4 {
  font-family: Lato, sans-serif;
  font-size: calc((22 / 16) * 1rem);
  margin-top: 0;
  margin-bottom: var(--TWO-INCREMENTS);
  line-height: 1.2;
  font-weight: 400;
}

h5 {
  font-family: Lato, sans-serif;
  font-size: calc((18 / 16) * 1rem);
  margin-top: 0;
  margin-bottom: var(--TWO-INCREMENTS);
  line-height: 1.2;
  font-weight: 400;
}

h6 {
  font-family: Lato, sans-serif;
  font-size: var(--BASE-FONT-REM);
  margin-top: 0;
  margin-bottom: var(--TWO-INCREMENTS);
  line-height: 1.2;
  font-weight: 400;
}

.feed__image {
  margin: 0 auto;
  padding-top: var(--THREE-INCREMENTS);
  display: block;
  width: 80%;
}

.follow-toggle {
  margin-bottom: var(--THREE-INCREMENTS);
}

@supports (display: grid) {
  .hive-grid {
    display: grid;
      grid-template-columns: repeat(12, 1fr);
      grid-gap: 20px;
  }
}

.hive-grid {
  max-width: var(--MAX-SITE-WIDTH-REM);
  margin: 0 auto;
}

.u-full-width {
  max-width: var(--MAX-SITE-WIDTH-REM);
  margin: 0 auto;
}

.hive-grid--article > .main-content {
  grid-column: 1 / -1;
}

@media screen and (min-width: 56.25em) {
  .hive-grid--article > .main-content {
    grid-column: 1 / 9;
  }
}

/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
article-page, flavor A, feed-item
- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
.article-feed {
  padding-left: 0;
}

.article-feed__item {
  display: flex;
  margin-bottom: var(--THREE-INCREMENTS);
}

.article-feed__item__avatar {
  width: 47px;
  height: 47px;
  border: 1px solid #eee;
  border-radius: 50%;
  flex: 0 0 47px;
  margin-right: 1.5rem;
}

.article-feed__item__date {
  font-family: Lato, sans-serif;
}

.article-feed__item__title,
p.article-feed__item__title {
  font-family: Lato, sans-serif;
  font-size: 1.5rem;
  margin-bottom: var(--TWO-INCREMENTS);
}

.article-feed__item__read_more {
  display: block;
  margin-bottom: var(--TWO-INCREMENTS);
}

.article-feed__item h3 {
  font-size: 1rem;
  font-weight: bold;
  line-height: 1.5rem;
}

.article-author-list {
  font-family: Lato, sans-serif;
  padding-left: 0;
  display: flow-root;
  list-style: none;
}

.article-author-list > li {
  float:left;
}

.article-author-list > li:after {
  content: ', \00a0';
}

.article-author-list > li:last-child:after {
  content: '';
}

.article-meta-data-list {
  font-family: Lato, sans-serif;
  list-style: none;
  padding-left: 0;
}

.article-call-to-action-link {
  font-family: Lato, sans-serif;
}

